--- a/src/theme.css
+++ b/src/theme.css
@@ -1,10 +1,10 @@
 :root {
-	--page-background-color: #282c37;
-	--background-color: #313543;
-	--text-color: #FFF;
-	--text-color-secondary: #9baec8;
-	--text-color-links: #8c8dff;
-	--main-font-family: 'Roboto', sans-serif;
+	--page-background-color: #FFF;
+	--background-color: #e7eef8;
+	--text-color: #000;
+	--text-color-secondary: #4f6587;
+	--text-color-links: #4f6587;
+	--main-font-family: courier;
 	--borer-radius: 0.5rem;
 	--padding: 1.5rem;
 }
