change link color

--- a/src/theme.css
+++ b/src/theme.css
@@ -3,7 +3,7 @@
 	--background-color: #e7eef8;
 	--text-color: #000;
 	--text-color-secondary: #4f6587;
-	--text-color-links: #4f6587;
+	--text-color-links: #dd9206;
 	--main-font-family: courier;
 	--borer-radius: 0.5rem;
 	--padding: 1.5rem;
